@@ -1,0 +1,97 @@
+# All words must contain at least one hyphen, even if the
+# word is usually not spelled with a hyphen.
+# "+" at the end of the line will turn off the suggestion that
+# uses a hyphen.
+# "*" at the end of the line will only suggest hyphenated words.
+# Quelle: words with "-" from https://de.wikipedia.org/wiki/Liste_der_St%C3%A4dte_in_Deutschland
+# License: Creative-Commons-Lizenz Attribution-ShareAlike 3.0 Unported
+Annaberg-Buchholz*
+Auma-Weidatal*
+Colberg-Heldburg*
+Baden-Baden*
+Gottleuba-Berggießhübel*
+Neuenahr-Ahrweiler*
+Soden-Salmünster*
+Sooden-Allendorf*
+Teinach-Zavelstein*
+Belgern-Schildau*
+Bernkastel-Kues*
+Bietigheim-Bissingen*
+Bitterfeld-Wolfen*
+Brand-Erbisdorf*
+Brotterode-Trusetal*
+Castrop-Rauxel*
+Clausthal-Zellerfeld*
+Dessau-Roßlau*
+Doberlug-Kirchhain*
+Dornburg-Camburg*
+Ebersbach-Neugersdorf*
+Gau-Algesheim*
+Ginsheim-Gustavsburg*
+Groß-Bieberau*
+Groß-Gerau*
+Groß-Umstadt*
+Grünhain-Beierfeld*
+Hohenstein-Ernstthal*
+Höhr-Grenzhausen*
+Horn-Meinberg*
+Idar-Oberstein*
+Kamp-Lintfort*
+Kohren-Sahlis*
+Königsee-Rottenbach*
+Korntal-Münchingen*
+Lauda-Königshofen*
+Lauter-Bernsbach*
+Leinefelde-Worbis*
+Leinfelden-Echterdingen*
+Limbach-Oberfrohna*
+Maxhütte-Haidhof*
+Mörfelden-Walldorf*
+Mülheim-Kärlich*
+Neu-Anspach*
+Neu-Isenburg*
+Neukirchen-Vluyn*
+# Neumarkt-Sankt Veit:
+Neumarkt-Sankt*
+Neusalza-Spremberg*
+Neustadt-Glewe*
+Neu-Ulm*
+Nieder-Olm*
+Ober-Ramstadt*
+Oebisfelde-Weferlingen*
+Oer-Erkenschwick*
+Oestrich-Winkel*
+Oranienbaum-Wörlitz*
+Osterholz-Scharmbeck*
+Pausa-Mühltroff*
+Pockau-Lengefeld*
+Raguhn-Jeßnitz*
+Ramstein-Miesenbach*
+Ransbach-Baumbach*
+Regis-Breitingen*
+Rehburg-Loccum*
+Remda-Teichel*
+Rheda-Wiedenbrück*
+Ribnitz-Damgarten*
+Saalburg-Ebersdorf*
+Sandersdorf-Brehna*
+Schieder-Schwalenberg*
+Schirgiswalde-Kirschau*
+# Schloß Holte-Stukenbrock:
+Holte-Stukenbrock*
+Steinbach-Hallenberg*
+Sulzbach-Rosenberg*
+Tambach-Dietharz*
+Titisee-Neustadt*
+Traben-Trarbach*
+Übach-Palenberg*
+Uebigau-Wahrenbrück*
+Villingen-Schwenningen*
+Waldshut-Tiengen*
+Wanzleben-Börde*
+Wettin-Löbejün*
+Wilkau-Haßlau*
+Wolframs-Eschenbach*
+Zahna-Elster*
+Zella-Mehlis*
+Zeulenroda-Triebes*
