@@ -2,7 +2,8 @@ LanguageTool Change Log
 
 2.8-SNAPSHOT (release planned for 2014-12-30)
 
-    -...
+-German:
+    -added a few rules
 
 
 2.7 (2014-09-29)
